--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -14,7 +14,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: ubuntu-latest
+                os: [ubuntu-latest]
                 toolchain:
                     - stable
         steps:
@@ -28,7 +28,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: ubuntu-latest
+                os: [ubuntu-latest]
                 toolchain:
                     - stable
         steps:
@@ -42,7 +42,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: ubuntu-latest
+                os: [ubuntu-latest]
                 toolchain:
                     - stable
         steps:
@@ -56,7 +56,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: ubuntu-latest
+                os: [ubuntu-latest]
                 toolchain:
                     - stable
         steps:
@@ -76,7 +76,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: ubuntu-latest
+                os: [ubuntu-latest]
                 toolchain:
                     - stable
         steps:
