--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# freedesktop-desktop-entry = "0.7.13"
-# freedesktop-icons = "0.4.0"
+freedesktop-desktop-entry = "0.7.13"
+freedesktop-icons = "0.4.0"
 gpui = { git = "https://github.com/zed-industries/zed" }
 gpui_macros = { git = "https://github.com/zed-industries/zed" }
 unicode-segmentation = "1.12.0"
