--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -11,59 +11,39 @@ env:
 jobs:
     format:
         name: Check formatting
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                toolchain:
-                    - stable
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v5
-            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+            - uses: cachix/install-nix-action@v31
             - uses: Swatinem/rust-cache@v2
-            - run: cargo fmt --check
+            - run: nix shell --run "cargo fmt --check"
 
     clippy:
         name: Run lints
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                toolchain:
-                    - stable
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v5
-            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+            - uses: cachix/install-nix-action@v31
             - uses: Swatinem/rust-cache@v2
-            - run: cargo clippy --all-targets --all-features
+            - run: nix shell --run "cargo clippy --all-targets --all-features"
 
     build_and_test:
         name: Build project and test
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                toolchain:
-                    - stable
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v5
-            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+            - uses: cachix/install-nix-action@v31
             - uses: Swatinem/rust-cache@v2
-            - run: cargo test --verbose
+            - run: nix shell --run "cargo test --verbose"
 
     build_release:
         name: Build project in release
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                toolchain:
-                    - stable
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v5
-            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+            - uses: cachix/install-nix-action@v31
             - uses: Swatinem/rust-cache@v2
-            - run: cargo build --verbose --release
+            - run: nix shell --run "cargo build --verbose --release"
             - name: Export executable
               uses: actions/upload-artifact@v4
               with:
@@ -73,14 +53,9 @@ jobs:
 
     clippy_release:
         name: Run lints in release mode
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                toolchain:
-                    - stable
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v5
-            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+            - uses: cachix/install-nix-action@v31
             - uses: Swatinem/rust-cache@v2
-            - run: cargo clippy --release --all-targets --all-features
+            - run: nix shell --run "cargo clippy --release --all-targets --all-features"
