--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -11,39 +11,61 @@ env:
 jobs:
     format:
         name: Check formatting
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
+                toolchain:
+                    - stable
         steps:
             - uses: actions/checkout@v5
-            - uses: cachix/install-nix-action@v31
+            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
-            - run: nix shell --run "cargo fmt --check"
+            - run: cargo fmt --check
 
     clippy:
         name: Run lints
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
+                toolchain:
+                    - stable
         steps:
             - uses: actions/checkout@v5
-            - uses: cachix/install-nix-action@v31
+            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
-            - run: nix shell --run "cargo clippy --all-targets --all-features"
+            - run: cargo clippy --all-targets --all-features
 
     build_and_test:
         name: Build project and test
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
+                toolchain:
+                    - stable
         steps:
             - uses: actions/checkout@v5
-            - uses: cachix/install-nix-action@v31
+            - run: sudo apt-get update && sudo apt-get install -y libxkbcommon-dev
+            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
-            - run: nix shell --run "cargo test --verbose"
+            - run: cargo test --verbose
 
     build_release:
         name: Build project in release
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
+                toolchain:
+                    - stable
         steps:
             - uses: actions/checkout@v5
-            - uses: cachix/install-nix-action@v31
+            - run: sudo apt-get update && sudo apt-get install -y libxkbcommon-dev
+            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
-            - run: nix shell --run "cargo build --verbose --release"
+            - run: cargo build --verbose --release
             - name: Export executable
               uses: actions/upload-artifact@v4
               with:
@@ -53,9 +75,14 @@ jobs:
 
     clippy_release:
         name: Run lints in release mode
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
+                toolchain:
+                    - stable
         steps:
             - uses: actions/checkout@v5
-            - uses: cachix/install-nix-action@v31
+            - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
-            - run: nix shell --run "cargo clippy --release --all-targets --all-features"
+            - run: cargo clippy --release --all-targets --all-features
