--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -47,7 +47,7 @@ jobs:
                     - stable
         steps:
             - uses: actions/checkout@v5
-            - run: sudo apt-get update && sudo apt-get install -y libxkbcommon-dev
+            - run: sudo apt-get update && sudo apt-get install -y libxkbcommon-dev libxkbcommon-x11-dev
             - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
             - run: cargo test --verbose
@@ -62,7 +62,7 @@ jobs:
                     - stable
         steps:
             - uses: actions/checkout@v5
-            - run: sudo apt-get update && sudo apt-get install -y libxkbcommon-dev
+            - run: sudo apt-get update && sudo apt-get install -y libxkbcommon-dev libxkbcommon-x11-dev
             - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
             - uses: Swatinem/rust-cache@v2
             - run: cargo build --verbose --release
