--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ gpui = { git = "https://github.com/zed-industries/zed", default-features = false
 ] }
 gpui_macros = { git = "https://github.com/zed-industries/zed" }
 unicode-segmentation = "1.12.0"
+xflags = "0.3.2"
