--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ gpui = { git = "https://github.com/zed-industries/zed", default-features = false
     "http_client",
 ] }
 gpui_macros = { git = "https://github.com/zed-industries/zed" }
+serde = { version = "1.0.219", features = ["derive"] }
 smol = "2.0.2"
+toml = "0.9.5"
 unicode-segmentation = "1.12.0"
 xflags = "0.3.2"
