--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-freedesktop-desktop-entry = "0.7.13"
+freedesktop-desktop-entry = { version = "0.7.13", default-features = false }
 freedesktop-icons = "0.4.0"
 gpui = { git = "https://github.com/zed-industries/zed", default-features = false, features = [
     "wayland",
     "http_client",
 ] }
-gpui_macros = { git = "https://github.com/zed-industries/zed" }
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.219", default-features = false, features = ["derive"] }
 smol = "2.0.2"
-toml = "0.9.5"
+toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
 unicode-segmentation = "1.12.0"
 xflags = "0.3.2"
