--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ gpui = { git = "https://github.com/zed-industries/zed", default-features = false
     "wayland",
     "http_client",
 ] }
+rust-embed = "8.7.2"
 serde = { version = "1.0.219", default-features = false, features = ["derive"] }
 smol = "2.0.2"
-toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
+toml = { version = "0.9.5", default-features = false, features = [
+    "parse",
+    "serde",
+] }
 unicode-segmentation = "1.12.0"
 xflags = "0.3.2"
