--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ freedesktop-desktop-entry = { version = "0.7.13", default-features = false }
 freedesktop-icons = "0.4.0"
 gpui = { git = "https://github.com/zed-industries/zed", default-features = false, features = ["wayland" ] }
 rust-embed = "8.7.2"
-serde = { version = "1.0.219", default-features = false, features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
 smol = "2.0.2"
 toml = { version = "0.9.5", default-features = false, features = [
     "parse",
