Saving frequency history

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,7 @@ gpui = { git = "https://github.com/zed-industries/zed", default-features = false
 rust-embed = "8.7.2"
 serde = { version = "1.0.219", features = ["derive"] }
 smol = "2.0.2"
-toml = { version = "0.9.5", default-features = false, features = [
-    "parse",
-    "serde",
-] }
+toml = { version = "0.9.5", features = ["serde"] }
 unicode-segmentation = "1.12.0"
 xflags = "0.3.2"
 
