--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 freedesktop-desktop-entry = { version = "0.7.13", default-features = false }
 freedesktop-icons = "0.4.0"
 gpui = { git = "https://github.com/zed-industries/zed", default-features = false, features = ["wayland" ] }
+nucleo-matcher = "0.3.1"
 rust-embed = "8.7.2"
 serde = { version = "1.0.219", features = ["derive"] }
 smol = "2.0.2"
