--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ xflags = "0.3.2"
 
 [patch."https://github.com/zed-industries/zed"]
 gpui = { git = "https://github.com/guibi1/zed.git", branch = "patched" }
+
+[profile.release]
+codegen-units = 1
+lto = "thin"
