--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ evalexpr = "13.1.0"
 freedesktop-desktop-entry = { version = "0.7.13", default-features = false }
 freedesktop-icons = "0.4.0"
 gpui = { git = "https://github.com/zed-industries/zed", default-features = false, features = ["wayland"] }
+nmrs = "2.0.0"
 nucleo-matcher = "0.3.1"
 rust-embed = "8.7.2"
 serde = { version = "1.0.219", features = ["derive"] }
